# arrobd

./: .gitignore  LICENSE  README.md  meson.build  meson.options
.github/workflows/: ci.yml
frontend/: index.html
src/: batch_builder.cpp  batch_builder.h  elm327.cpp  elm327.h  ipc_serializer.cpp  ipc_serializer.h  main.cpp  mock_serial.cpp  mock_serial.h  pids.cpp  pids.h  pipeline.cpp  pipeline.h  serial.cpp  serial.h  ws_server.cpp  ws_server.h
subprojects/: arrow-cpp.wrap  libwebsockets.wrap
test/: meson.build  test_batch.cpp  test_elm327.cpp
